tests/src/snapshots/fe_compiler_tests__compile_errors__non_bool_and.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: binary op `and` operands must have type `bool`
  ┌─ [snippet]:5:13
  │
5 │   x = x and y
  │             ^ this has type `u256`; expected `bool`


